infrastructure/planningpoker.yaml
apiVersion: v1
kind: Service
metadata:
  name: planningpoker
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: planningpoker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planningpoker
spec:
  selector:
    matchLabels:
      app: planningpoker
  replicas: 1
  template:
    metadata:
      labels:
        app: planningpoker
    spec:
      imagePullSecrets:
        - name: aws-ecr-registry
      containers:
        - name: planningpoker
          image: 075374763076.dkr.ecr.eu-central-1.amazonaws.com/planningpoker:latest
          ports:
            - containerPort: 8080
