infrastructure/planningpoker_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planningpoker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - planningpoker.cc
        - www.planningpoker.cc
      secretName: letsencrypt-prod
  rules:
    - host: planningpoker.cc
      http:
        paths:
          - backend:
              serviceName: planningpoker
              servicePort: 80
    - host: www.planningpoker.cc
      http:
        paths:
          - backend:
              serviceName: planningpoker
              servicePort: 80

# Because of issues with cert-manager this does not work reliably. Domain is configured in coins-infrastructure.
